ClinicaVeterinaria/force-app/main/default/objects/Mascota__c/fields/Notas__c.field-meta.xml
<CustomField>
    <fullName>Notas__c</fullName>
    <label>Notas</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>