ClinicaVeterinaria/force-app/main/default/objects/Mascota__c/fields/Propietario__c.field-meta.xml
<CustomField>
    <fullName>Propietario__c</fullName>
    <label>Propietario</label>
    <referenceTo>Propietario__c</referenceTo>
    <relationshipName>Mascotas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>