ClinicaVeterinaria/force-app/main/default/objects/Mascota__c/listViews/Mascotas_Peso_10Kg.listView-meta.xml
<ListView>
    <fullName>Mascotas_Peso_10Kg</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Peso__c</field>
        <operation>greaterOrEqual</operation>
        <value>10</value>
    </filters>
    <label>Mascotas Peso &gt; 10Kg</label>
</ListView>